src/snapshots/bluetui__notification__tests__longer withnewline-Info.snap
---
source: src/notification.rs
expression: terminal.backend()
---
"                                                               ┏━━━━━━━━━━━━━┓  "
"                                                               ┃    Info     ┃  "
"                                                               ┃ longer with ┃  "
"                                                               ┃   newline   ┃  "
"                                                               ┗━━━━━━━━━━━━━┛  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
