src/snapshots/bluetui__notification__tests__longer withnewline-Warning.snap
---
source: src/notification.rs
expression: terminal.backend()
---
"                                                               ┏━━━━━━━━━━━━━┓  "
"                                                               ┃   Warning   ┃  "
"                                                               ┃ longer with ┃  "
"                                                               ┃   newline   ┃  "
"                                                               ┗━━━━━━━━━━━━━┛  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
