src/snapshots/bluetui__notification__tests__withnewline-Info.snap
---
source: src/notification.rs
expression: terminal.backend()
---
"                                                                   ┏━━━━━━━━━┓  "
"                                                                   ┃  Info   ┃  "
"                                                                   ┃  with   ┃  "
"                                                                   ┃ newline ┃  "
"                                                                   ┗━━━━━━━━━┛  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
